manifests/sample-app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-web
  namespace: sample-app
  labels:
    app.kubernetes.io/name: sample-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: sample-web
